# rs-cube

./: Cargo.toml
src/: main.rs
