[package]
name = "rs_cube"
version = "0.1.0"
authors = ["Slals <jonathan@blocs.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = "0.6.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"